--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -6,10 +6,8 @@
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="index.css" type="text/css">
 
-    <!-- Latest compiled and minified CSS -->
+    <!-- for top navbar -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 
@@ -59,41 +57,29 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+</header>
 
     <!-- Seitenüberschrift-->
-</header>
-<header id="heading">
-    <h1>Compare Pictures</h1>
-    <h2>Click on the one you like better</h2>
-</header>
+    <header id="heading">
+        <h1>Compare Pictures</h1>
+        <h2>Click on the one you like better</h2>
+    </header>
 
-<!-- Bildervergleich Versuch mit Bootstrap
-	<div class="row justify-content-around">
-        <div class="col-sm-4">
-            <img id="img1" class="img-rounded center-block" src="C:\Users\liebezei\Desktop\DHBW\3. Semester\Fallstudie\mountains1.jpg"  alt="no picture uploaded" style="width:100%" height="300px" width="300px">
 
-          </div>
+    <div class="row">
+        <div class="column1">
+            <img class="image1" src="./images/mountains1.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
 
-        <div class="col-sm-4">
-			<img id="img2"class="img-rounded center-block" src="C:\Users\liebezei\Desktop\DHBW\3. Semester\Fallstudie\mountains2.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
+        </div>
+
+        <div class="column2">
+            <img class="image2" src="./images/mountains2.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
         </div>
     </div>
--->
 
-<div class="row">
-    <div class="column1">
-        <img class="image1" src="./images/mountains1.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
-        <!-- <img class="middle" src="C:\Users\liebezei\Desktop\DHBW\3. Semester\Fallstudie\like-heart.jpg"> -->
-    </div>
-
-    <div class="column2">
-        <img class="image2" src="./images/mountains2.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
-    </div>
-</div>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-</script>
+    <!-- JavaScript for top navbar -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+    </script>
 
 
 
