--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -13,9 +13,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <!-- <script type=text/javascript src = "login.js"></script> -->
+    <!-- <script type=text/javascript src = "index.js"></script> -->
 </head>
-</head>
+
 <body>
 
 <header class="navbar navbar-inverse">
