--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="index.css">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- <script type=text/javascript src = "login.js"></script> -->
+        <!-- <script type=text/javascript src = "index.js"></script> -->
     </head>
     <body>
         
