create shootout button formatiert

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -65,7 +65,12 @@
         <div class="col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
             <div class="sidebar-nav">
                 <ul class="nav">
-
+                    <header>Shootouts</header>
+                    <br>
+                    <button type="button" id="create_shootout">Create shootout</button>
+                    <div class="form-group">
+                        <input id="search_shootout" type="text" class="form-control" placeholder="Search">
+                    </div>
                     <li class="active"><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
