--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -30,10 +30,40 @@
         <input type="password" id="passwordlogin" name="passwordlogin">
         <div id="lower">
             <input type="checkbox"><label for="checkbox">Keep me logged in</label>
-            <input type="submit" value="Login">
+            <input type="submit" value="Login" onclick="signinUser()">
         </div>
     </form>
 </div>
+<script>
+
+
+    function signinUser(){
+        alert('signin shit started'); //debug purpos only
+
+        // initalizing variables with textfields from html signin form
+
+        var username = document.getElementById("username").value;
+        var password = document.getElementById("password").value;
+
+        // Check if ConfirmationPW = PW
+
+            //create hashed PW
+            var valpw = createvalidpw(password);
+            alert(valpw); //debug purpos only
+
+            var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
+
+            xmlhttp.open("GET", "http://localhost:8080/meetme/api/" + username);
+            xmlhttp.setRequestHeader("Content-Type", "application/json");
+            //sent the new HttpRequest
+            xmlhttp.send(null);
+            xmlhttp.responseText;
+
+    }
+</script>
+
+
+
 <!-- creates signup sheet -->
 <div id="signup">
     <form name="signupform" id="signupform" >
@@ -50,37 +80,43 @@
         <label for="confpassword">Confirm password:</label>
         <input type="password" id="confpassword" name="confpassword">
         <div id="lower2">
-            <input type="submit" value="Create account" onclick="registerUser()" onclick="checkPassword()">
+            <input type="submit" value="Create account" onclick="registerUser()" >
         </div>
     </form>
 </div>
 
 <script>
-   /* function checkPW(){
-        var password = document.getElementById("password").value;
-        var confpassword = document.getElementById("confpassword").value;
-
-        if (password == confpassword) {
-            alert('Passwort ist gleich')
-        } else {
-            alert('Passwort ist nicht gleich')
-        }
-    }*/
-
-    function registerUser(){
-        var email = document.getElementById("mail").value;
-        var lastname = document.getElementById("lastname").value;
-        var firstname = document.getElementById("firstname").value;
-        var username = document.getElementById("username").value;
-        var password = document.getElementById("password").value;
 
 
-        var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
+   function registerUser(){
+       alert('shit started'); //debug purpos only
 
-        xmlhttp.open("POST", "http://localhost:8080/meetme/api/person");
-        xmlhttp.setRequestHeader("Content-Type", "application/json");
-        xmlhttp.send(JSON.stringify({"email": email,"password": password,"name": lastname,"firstName": firstname, "username" : username }));
-    }
+       // initalizing variables with textfields from html signup form
+       var email = document.getElementById("mail").value;
+       var lastname = document.getElementById("lastname").value;
+       var firstname = document.getElementById("firstname").value;
+       var username = document.getElementById("username").value;
+       var password = document.getElementById("password").value;
+       var confpw = document.getElementById("confpassword").value;
+
+       // Check if ConfirmationPW = PW
+       if(checkPassword(confpw,password) === true){
+           //create hashed PW
+           var valpw = createvalidpw(password);
+           alert(valpw); //debug purpos only
+
+           var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
+
+           xmlhttp.open("POST", "http://localhost:8080/meetme/api/person");
+           xmlhttp.setRequestHeader("Content-Type", "application/json");
+           //sent the new HttpRequest
+           xmlhttp.send(JSON.stringify({"email": email,"password": valpw,"name": lastname,"firstName": firstname, "username" : username }));
+       }
+       else{
+          alert('signin failed');
+       }
+
+   }
 </script>
 
 
