Help Button in index und compare

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -110,6 +110,11 @@
 </div>
 <!--/row-->
 
+<!--Help button-->
+<div id="help">
+    <button id="buttonHelp" onclick="showHelp()">Help</button>
+</div>
+
     <!-- JavaScript for top navbar -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
