--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -20,6 +20,11 @@
     <button id="buttonCreate" onclick="showCreateAccount()">Create account</button>
     <button id="buttonLogin" onclick="showLogin()">Back to login</button>
 </div>
+<!--creates Help Button-->
+<div id="help">
+    <button id="buttonHelp" onclick="showHelp()">Help</button>
+</div>
+
 <!-- creates basic login-form -->
 <div id="container">
     <form id="login" name="login">
