Help Button in index und compare with hover

--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -78,6 +78,10 @@
         </tr>
 
     </table>
+     <!--help button-->
+     <div id="help">
+         <button id="buttonHelp" onclick="showHelp()">Help</button>
+     </div>
 
 <script>
     window.onload = function () {
