--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -7,53 +7,7 @@
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="index.css">
     <script type=text/javascript src = "index.js"></script>
-<style>
-/* creates Help Button*/
-    .helpp{
-    background-color: #E9AD9C;
-    border: none;
-    width: 40px;
-    height: 60px;
-    position: fixed;
-    margin-left: 1185px;
-    display: inline-block;
-    bottom: 400px;
-    z-index: 2;
-    border-radius: 5px;
-    }
-    .helpp .helpText{
-    visibility: hidden;
-    width: 150px;
-    height: 200px;
-    background-color: #E9AD9C;
-    color: black;
-    text-align: center;
-    border-radius: 5px;
-    padding: 7px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: -21%;
-    left: -250%;
-    margin-left: -70px;
-    opacity: 0;
-    transition: opacity 0.3s;
-    }
-    .helpp .helpText::after{
-    content: "";
-    position: absolute;
-    top: 80%;
-    left: 100%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #E9AD9C transparent transparent transparent;
-    }
-    .helpp:hover .helpText{
-    visibility: visible;
-    opacity: 1;
-    }
 
-</style>
 </head>
 
 <body>
@@ -68,14 +22,9 @@
     <button id="buttonCreate" onclick="showCreateAccount()">Create account</button>
     <button id="buttonLogin" onclick="showLogin()">Back to login</button>
 </div>
-<!--creates Help Button
-<div id="help">
-    <button id="buttonHelp" onclick="showHelp()">Help</button>
 
-</div>
--->
-<!--creates Help button with hover-->
-<button class="helpp">Help
+<!--creates Help button-->
+<button class="help">Help
     <span class="helpText">To sign in with your klicks-account please enter your username and password
         into the predicted input box and click on the “Log In”-button afterwards. <br>
         If you don’t have a klicks-account, please select “Create Account” to register.
