--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -47,7 +47,7 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="allusers.html">Nutzerübersicht</a></li>  <!-- Hab ich nur vorläuftig mal hier hin gepackt zwecks schnellerem Zugriff -->
-                    <li><a href="#">Compare Pictures</a></li>
+                    <li><a href="compare.html">Compare Pictures</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
