--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -9,12 +9,13 @@
     <!-- for top navbar -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script type=text/javascript src = "navbarFunction.js"></script>
 </head>
 
 <body>
-<header class="navbar navbar-inverse">
+<header class="navbar navbar-inverse" >
     <nav role="navigation">
-        <div class="container-fluid">
+        <div class="container-fluid" id=""navbar">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -40,17 +41,16 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="allusers.html">Nutzerübersicht</a></li>  <!-- Hab ich nur vorläuftig mal hier hin gepackt zwecks schnellerem Zugriff -->
                     <li class="active"><a href="#">Compare Pictures</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="allusers.html">Nutzerübersicht</a></li>
                             <li><a href="#">Help</a></li>
-                            <li><a href="#">Sign out</a></li>
                             <li><a href="#">AGB's</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">Sign out</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -68,8 +68,8 @@
                     <header>Shootouts</header>
                     <br>
                     <button type="button" id="create_shootout">Create shootout</button>
-                    <div class="form-group">
-                        <input id="search_shootout" type="text" class="form-control" placeholder="Search">
+                    <div class="form-group" id="search_shootout">
+                        <input  type="text" class="form-control" placeholder="Search">
                     </div>
                     <li class="active"><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
@@ -94,7 +94,7 @@
         </header>
 
         <!-- Bildervergleich -->
-        <div class="container">
+        <div class="container" id="image_container">
             <div class="col-sm-4 column1">
                 <img class="img-auto" id="image1" src="./images/mountains1.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
 
