--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -4,7 +4,7 @@
 <head>
     <title>Fallstudie</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
-    <link rel="stylesheet" href="compare.css" type="text/css">
+    <link rel="stylesheet" href="compare_profile.css" type="text/css">
 
     <!-- for top navbar -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-<header class="navbar navbar-inverse" >
-    <nav role="navigation">
-        <div class="container-fluid" id=""navbar">
+<header class="navbar navbar-inverse">
+    <nav role="navigation" id="navbar">
+        <div class="container-fluid" >
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -28,12 +28,8 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <!--            <li><a href="#">Help</a></li>
-                                <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
-                     -->
-                </ul>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
+                <ul class="nav navbar-nav"></ul>
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
