--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Fallstudie</title>
         <link rel="icon" href="./images/Herzbeben_Logo.png">
-        <link rel="stylesheet" href="compare.css">
+        <link rel="stylesheet" href="compare_profile.css">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- <script type=text/javascript src = "index.js"></script> -->
@@ -42,16 +42,16 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="compare.html">Compare Pictures</a></li>
             <li class="active"><a href="profile.html">Profile</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Sign out</a></li>
-                <li><a href="#">AGB's</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="#">Help</a></li>
+                      <li><a href="#">Sign out</a></li>
+                      <li><a href="#">AGB's</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                  </ul>
+              </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
