--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -49,7 +49,7 @@
 
 
     function signinUser(){
-        alert('signin shit started'); //debug purpos only
+        alert('signin shit started'); //debug purpose only
 
         // initalizing variables with textfields from html signin form
 
@@ -60,7 +60,7 @@
 
             //create hashed PW
             var valpw = createvalidpw(password);
-            alert(valpw); //debug purpos only
+            alert(valpw); //debug purpose only
 
             var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
 
@@ -100,7 +100,7 @@
 
 
    function registerUser(){
-       alert('shit started'); //debug purpos only
+       alert('shit started'); //debug purpose only
 
        // initalizing variables with textfields from html signup form
        var email = document.getElementById("mail").value;
@@ -114,7 +114,7 @@
        if(checkPassword(confpw,password) === true){
            //create hashed PW
            var valpw = createvalidpw(password);
-           alert(valpw); //debug purpos only
+           alert(valpw); //debug purpose only
 
            var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
 
