placeholder index page

--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -79,9 +79,9 @@
 
     </table>
      <!--help button-->
-     <div id="help">
-         <button id="buttonHelp" onclick="showHelp()">Help</button>
-     </div>
+<button class="helpBtn">Help
+    <span class="helpText">Here's the help text.</span>
+</button>
 
 <script>
     window.onload = function () {
