--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -64,3 +64,7 @@
         </div>
         <p id="profile-username">Username</p>
 
+    <!--Help button-->
+    <button class="helpBtn2">Help
+        <span class="helpText">Please insert help text.</span>
+    </button>
