navbar fixed auf compare seite

--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         
-    <header class="navbar navbar-inverse">
+    <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
     <nav role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
