--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -3,7 +3,7 @@
 <head>
     <title>Fallstudie</title>
     <link rel="icon" href="Herzbeben_Logo.png">
-	<link rel="stylesheet" href="index.css" type="text/css">
+	<link rel="stylesheet" href="compare_profile.css" type="text/css">
     <link rel="stylesheet" href="shootout.css" type="text/css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
 <!--            <li><a href="#">Help</a></li>
             <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
- -->           
+ -->
           </ul>
           <form class="navbar-form navbar-left">
             <div class="form-group">
@@ -56,7 +56,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    </header>  
+    </header>
     <div id="ShootoutÜbersicht">
         <table>
         <tr>
