--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script type=text/javascript src = "navbarFunction.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
 
     <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
         <nav role="navigation" >
@@ -35,6 +36,8 @@
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="shootoutÜbersicht.html">Shootout Übersicht</a></li>
+                        <li><a href="shootoutRanking.html">Ranking</a></li>
                         <li class="active"><a href="#">Compare Pictures</a></li>
                         <li><a href="profile.html">Profile</a></li>
                         <li class="dropdown">
