changes in navbar

--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="index.css">
     <script type=text/javascript src = "index.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
 
 </head>
 
