--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -11,53 +11,53 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script type=text/javascript src = "navbarFunction.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
-
-    <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
-        <nav role="navigation" >
-            <div class="container-fluid" >
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/Herzbeben_Logo.png" alt="Home" width="30px" height="30px"> </a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-                    <ul class="nav navbar-nav"></ul>
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="shootoutÜbersicht.html">Shootout Übersicht</a></li>
-                        <li><a href="shootoutRanking.html">Ranking</a></li>
-                        <li class="active"><a href="#">Compare Pictures</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li class="dropdown">
-                            <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                            <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="allusers.html">Nutzerübersicht</a></li>
-                                <li><a href="#">Help</a></li>
-                                <li><a href="#">AGB's</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Sign out</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-    </header>
 </head>
 
 <body>
+
+<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+    <nav role="navigation" >
+        <div class="container-fluid" >
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/Herzbeben_Logo.png" alt="Home" width="30px" height="30px"> </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
+                <ul class="nav navbar-nav"></ul>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="shootoutÜbersicht.html">Shootouts</a></li>
+                    <li><a href="shootoutRanking.html">Ranking</a></li>
+                    <li class="active"><a href="#">Compare Pictures</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li class="dropdown">
+                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="allusers.html">All Users</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">AGB's</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Sign out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+</header>
 
 
 <!-- Sidebar left -->
