--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -9,6 +9,8 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- <script type=text/javascript src = "index.js"></script> -->
+        <script type=text/javascript src = "navbarFunction.js"></script>
+        <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
     </head>
     <body>
         
@@ -40,23 +42,26 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
+              <li><a href="shootoutÜbersicht.html">Shootouts</a></li>
+              <li><a href="shootoutRanking.html">Ranking</a></li>
             <li><a href="compare.html">Compare Pictures</a></li>
             <li class="active"><a href="profile.html">Profile</a></li>
               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                  <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                  <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="allusers.html">All Users</a></li>
                       <li><a href="#">Help</a></li>
-                      <li><a href="#">Sign out</a></li>
                       <li><a href="#">AGB's</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
+                      <li><a href="#">Sign out</a></li>
                   </ul>
               </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-        </header>
+    </header>
+
         <div id="profile-picture">
         </div>   
         <div id="upload-picture" align="center">
