--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -10,10 +10,11 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script type=text/javascript src = "navbarFunction.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
 </head>
 <body>
-  <header class="navbar navbar-inverse">
+  <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
     <nav role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -29,11 +30,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-<!--            <li><a href="#">Help</a></li>
-            <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
- -->
-          </ul>
+          <ul class="nav navbar-nav"></ul>
           <form class="navbar-form navbar-left">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
@@ -41,16 +38,18 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Compare Pictures</a></li>
+              <li><a href="shootoutÜbersicht.html">Shootouts</a></li>
+              <li class="active"><a href="shootoutRanking.html">Ranking</a></li>
+            <li><a href="compare.html">Compare Pictures</a></li>
             <li><a href="profile.html">Profile</a></li>
               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                  <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                  <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="allusers.html">All Users</a></li>
                       <li><a href="#">Help</a></li>
-                      <li><a href="#">Sign out</a></li>
                       <li><a href="#">AGB's</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
+                      <li><a href="#">Sign out</a></li>
                   </ul>
               </li>
           </ul>
